<resources>
    <string name="app_name">DriverNoteGamma</string>
    <string name="select_date">Выберите дату</string>
    <string name="enter_detail">Введите название детали или работ по ремонту</string>
    <string name="repairs_cost">Введите стоимость детали/работы</string>
    <string name="enter_oil">Введите название масла</string>
    <string name="oil_cost">Введите стоимость масла</string>
    <string name="km">км</string>
    <string name="current_costs">затраты в этом месяце</string>
    <string name="current_odometer">пробег в этом месяце</string>
    <string name="lkm">л/100 км</string>
    <string name="kml">км/л</string>


    <string name="oil_prompt">Выберите тип масла</string>
    <string-array name="oil_type">
        <item>Минеральное</item>
        <item>Синтетическое</item>
        <item>Полусинтетическое</item>

    </string-array>

</resources>