<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/road"
    tools:context="com.example.vitalya.myapplication._4RepairsActivity">

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#9FA8DA"
        android:text="Ремонт"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="Дата:"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editTextCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:hint="@string/select_date"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textViewCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="Наименование запчасти:"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editTextRep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/enter_detail"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textViewFilled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="Стоимость, руб:"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/editDetal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/repairs_cost"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="17sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="Сохранить"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonMainMenu"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Главное меню" />
    </LinearLayout>

</LinearLayout>
